@@ -6,9 +6,8 @@ class UsersController < ApplicationController
 
   def create
     @user = User.new(user_params)
-    @user.skip_password_validation = true
     @user.generate_activation_token
-    UserMailer.activation(@user).deliver_later if @user.save
+    ApplicationMailer.activation(@user).deliver_later if @user.save
   end
 
   def destroy
@@ -18,7 +17,7 @@ class UsersController < ApplicationController
 
   def resend_activation_mail
     @user = User.where.not(activation_token: nil).find(params[:id])
-    UserMailer.activation(@user).deliver_later
+    ApplicationMailer.activation(@user).deliver_later
   end
 
   private
