@@ -1,0 +1,5 @@
+<p>We heard that you lost your Intercity password. Sorry about that!<br/>
+Don't worry! With the following link you can reset your password:</p>
+<p><%= @url %></p>
+<p>If you did not request a password reset email, just ignore and delete this email!</p>
+<p>Have a great day!</p>
