@@ -333,7 +333,7 @@ Rails.application.config.sorcery.configure do |config|
     # mailer class. Needed.
     # Default: `nil`
     #
-    # user.reset_password_mailer =
+    # user.reset_password_mailer = UserMailer
 
 
     # reset password email method on your mailer class.
