@@ -1,12 +1,0 @@
-require 'test_helper'
-
-class UserMailerTest < ActionMailer::TestCase
-  test "activation" do
-    user = users(:john)
-    user.activation_token = "1234"
-    mail = UserMailer.activation(user)
-    assert_equal "Welcome to Intercity", mail.subject
-    assert_equal [Setting.get(:from_email)], mail.from
-    assert_equal [user.email], mail.to
-  end
-end
