@@ -21,3 +21,4 @@ v 0.0.1 (unreleased)
 * Make SMTP configurable in the IC interface (jvanbaarsen)
 * Remember a login for 30 days (jvanbaarsen)
 * Enable SSL for your apps in the web interface (jvanbaarsen)
+* Add password reset functionality (jvanbaarsen)
